# agent-hub

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
agents/ai-drift-monitor/: README.md  STRUCTURE.md  eval_config.py  harness.py  prepare.py  program.md  pyproject.toml
agents/api-racer/: README.md  api_workload.json  endpoint_config.py  harness.py  prepare.py  program.md  pyproject.toml
agents/bundle-phobia/: README.md  bundle_config.py  dependency_graph.json  harness.py  prepare.py  program.md  pyproject.toml
agents/cache-tuner/: README.md  access_trace.json  baseline_results.json  cache_config.json  eviction_policy.py  harness.py  prepare.py  program.md  pyproject.toml
agents/ci-speedup/: README.md  harness.py  pipeline.json  pipeline_config.py  prepare.py  program.md  pyproject.toml
agents/code-autoresearch/: README.md  harness.py  prepare.py  program.md  pyproject.toml  target.py  workload.json
agents/cron-wizard/: README.md  harness.py  job_manifest.json  prepare.py  program.md  pyproject.toml  schedule_config.py
agents/data-dedup/: README.md  harness.py  match_rules.py  prepare.py  program.md  pyproject.toml  records.json
agents/dep-sentinel/: README.md  harness.py  policy.py  prepare.py  program.md  pyproject.toml  vulndb.json
agents/dep-sentinel/project/: app.py  requirements.txt  test_app.py
agents/docker-slim/: README.md  app_manifest.json  dockerfile_config.py  harness.py  prepare.py  program.md  pyproject.toml
agents/env-shrinker/: README.md  harness.py  infra_inventory.json  prepare.py  program.md  pyproject.toml  sizing_rules.py
agents/iac-lint/: README.md  harness.py  infra_resources.json  lint_rules.py  prepare.py  program.md  pyproject.toml
agents/llm-cost-pilot/: CLAUDE.md  README.md  analysis.ipynb  harness.py  models.yaml  prepare.py  program.md  pyproject.toml  router.py
agents/llm-cost-pilot/traffic/: README.md
agents/log-trimmer/: README.md  filter_rules.py  harness.py  log_samples.json  prepare.py  program.md  pyproject.toml
agents/prompt-tuner/: README.md  harness.py  prepare.py  program.md  prompt_config.py  pyproject.toml
agents/regex-chef/: README.md  harness.py  patterns.py  prepare.py  program.md  pyproject.toml  validation_set.json
agents/repo-pilot/: README.md  harness.py  prepare.py  program.md  pyproject.toml  triage.py
agents/schema-guard/: README.md  check_rules.py  harness.py  prepare.py  program.md  pyproject.toml  schema_changes.json
agents/sql-optimizer/: README.md  harness.py  prepare.py  program.md  pyproject.toml  rewrite_rules.py  workload.json
agents/test-shrink/: README.md  harness.py  prepare.py  program.md  pyproject.toml  test_config.py  test_suite.json
marketing/drafts/2026-03-22/: daily-report.md  hackernews.md  linkedin.md  twitter.md
marketing/drafts/2026-03-22-batch2/: linkedin.md  twitter.md
meta/: README.md  meta-harness.py  meta-program.md  meta-results.tsv  orchestrator.py  runner.py  tracker.py
templates/blank-agent/: README.md  editable.py  harness.py  prepare.py  program.md
