[project]
name = "ai-drift-monitor"
version = "0.1.0"
description = "Karpathy's AutoResearch for LLM evaluation drift detection"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
