[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-racer"
version = "1.0.0"
description = "API Racer — Optimize API endpoint configurations to minimize response time"
authors = [{name = "API Racer", email = "team@agent-hub.dev"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["api", "optimization", "latency", "performance", "endpoint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://agent-hub.dev"
Documentation = "https://agent-hub.dev/docs/api-racer"
Repository = "https://github.com/agent-hub/api-racer"
Issues = "https://github.com/agent-hub/api-racer/issues"

[tool.setuptools]
packages = ["api_racer"]
