[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "bundle-phobia"
version = "0.1.0"
description = "Optimize JavaScript bundle configuration to minimize bundle size"
authors = [{name = "Bundle Phobia", email = "agent@agent-hub.dev"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
