[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-dedup"
version = "0.1.0"
description = "Optimize fuzzy matching rules to deduplicate records in a dataset"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Agent Hub", email = "info@agent-hub.dev"}
]
keywords = ["deduplication", "fuzzy-matching", "data-cleaning", "CRM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]

dependencies = []

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://agent-hub.dev"
Repository = "https://github.com/agent-hub/data-dedup"
Issues = "https://github.com/agent-hub/data-dedup/issues"

[tool.setuptools]
packages = ["data_dedup"]
