[project]
name = "dep-sentinel"
version = "0.1.0"
description = "AI agent that optimizes dependency security using Karpathy's AutoResearch pattern"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
