[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "env-shrinker"
version = "0.1.0"
description = "Automated cloud infrastructure right-sizing to minimize cost while maintaining performance SLAs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Agent Hub", email = "contact@agent-hub.dev"}
]
keywords = ["cloud", "cost-optimization", "infrastructure", "right-sizing", "aws"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# No external dependencies - Python standard library only
dependencies = []

[project.urls]
Homepage = "https://agent-hub.dev"
Documentation = "https://agent-hub.dev/env-shrinker"
Repository = "https://github.com/agent-hub/env-shrinker"
Issues = "https://github.com/agent-hub/env-shrinker/issues"

[tool.setuptools]
packages = ["env_shrinker"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint]
max-line-length = 100
