[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-trimmer"
version = "0.1.0"
description = "Optimize log filtering rules to reduce volume while preserving signal"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Agent Hub", email = "agent@agent-hub.dev"}
]
keywords = ["logging", "optimization", "filtering", "autoresearch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://agent-hub.dev"
Documentation = "https://github.com/agent-hub/log-trimmer"
Repository = "https://github.com/agent-hub/log-trimmer"
Issues = "https://github.com/agent-hub/log-trimmer/issues"
