[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regex-chef"
version = "0.1.0"
description = "AutoResearch agent for optimizing regex patterns against labeled validation sets"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://agent-hub.dev/regex-chef"
Repository = "https://github.com/karpathy/regex-chef"

[tool.setuptools]
packages = ["regex_chef"]
