[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-pilot"
version = "0.1.0"
description = "Autonomous agent for issue triage optimization. AutoResearch pattern for repo maintenance."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "repo-pilot", email = ""},
]
keywords = ["issue-triage", "automation", "optimization", "agent", "autoresearch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/openai/repo-pilot"
Documentation = "https://github.com/openai/repo-pilot/blob/main/README.md"
Repository = "https://github.com/openai/repo-pilot"
