[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-optimizer"
version = "0.1.0"
description = "Automated SQL query optimization through learned rewrite rules"
authors = [
    {name = "Agent Hub", email = "agent@anthropic.com"}
]
requires-python = ">=3.10"
dependencies = []  # No external dependencies — uses Python standard library only
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://agent-hub.dev"
Repository = "https://agent-hub.dev"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
